objects/Documenttype__c.object
<CustomObject>
    <fields>
        <fullName>DescriptionText__c</fullName>
        <description>The description of the document type</description>
        <inlineHelpText>The description of the document type</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The source of this document, such as employee, vendor, etc.</description>
        <inlineHelpText>The source of this document, such as employee, vendor, etc.</inlineHelpText>
        <label>Document Source</label>
        <referenceTo>DocumentSource__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>DocumentTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentTypeAbbr__c</fullName>
        <description>The abbreviation of the document type</description>
        <inlineHelpText>The abbreviation of the document type</inlineHelpText>
        <label>Document Type Abbreviation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentTypeEID__c</fullName>
        <description>The Enterprise ID for this Document Type.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Document Type.</inlineHelpText>
        <label>Document Type EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DocumentationStage__c</fullName>
        <description>The stage of documentation in which this document type is used.</description>
        <inlineHelpText>The stage of documentation in which this document type is used.</inlineHelpText>
        <label>Documentation Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prerequisite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmployeSourceEID__c</fullName>
        <formula>DocumentSource__r.DocumentSourceEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmployeSourceEID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IEDocumentTypeId__c</fullName>
        <description>The document type id from the IE application</description>
        <externalId>true</externalId>
        <inlineHelpText>The document type id from the IE application</inlineHelpText>
        <label>IE Document Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>A sorting column for ranking document types</description>
        <inlineHelpText>A sorting column for ranking document types</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>How actively this document type is used in our process.</description>
        <inlineHelpText>How actively this document type is used in our process.</inlineHelpText>
        <label>Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Document Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DocumentTypeEID__c</columns>
        <columns>NAME</columns>
        <columns>DocumentTypeAbbr__c</columns>
        <columns>DocumentSource__c</columns>
        <columns>DescriptionText__c</columns>
        <columns>SortOrder__c</columns>
        <columns>IEDocumentTypeId__c</columns>
        <columns>EmployeSourceEID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>